--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
 	"bugs": {
 		"url": "https://github.com/haykam821/Complete-Appraisal/issues"
 	},
-	"homepage": "https://github.com/haykam821/Complete-Appraisal#readme"
+	"homepage": "https://github.com/haykam821/Complete-Appraisal#readme",
+	"dependencies": {
+		"chalk": "^2.4.1",
+		"eslint": "^5.9.0",
+		"eslint-config-haykam": "^1.5.1",
+		"require-all": "^3.0.0",
+		"snake-case": "^2.1.0"
+	}
 }
