--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
 		"url": "https://github.com/haykam821/Complete-Appraisal/issues"
 	},
 	"homepage": "https://github.com/haykam821/Complete-Appraisal#readme",
+	"bin": {
+		"ca": "./src/cli.js",
+		"completeappraisal": "./src/cli.js"
+	},
 	"dependencies": {
 		"chalk": "^2.4.1",
 		"eslint": "^5.9.0",
