--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"chalk": "^2.4.1",
 		"eslint": "^5.9.0",
 		"eslint-config-haykam": "^1.5.1",
+		"fs-extra": "^7.0.1",
 		"require-all": "^3.0.0",
 		"snake-case": "^2.1.0"
 	}
