--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"eslint": "^5.9.0",
 		"eslint-config-haykam": "^1.5.1",
 		"fs-extra": "^7.0.1",
+		"glob-gitignore": "^1.0.11",
+		"markdownlint": "^0.11.0",
 		"require-all": "^3.0.0",
 		"snake-case": "^2.1.0"
 	}
