--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"glob-gitignore": "^1.0.11",
 		"markdownlint": "^0.11.0",
 		"require-all": "^3.0.0",
-		"snake-case": "^2.1.0"
+		"snake-case": "^2.1.0",
+		"yargs": "^12.0.5"
 	}
 }
